# naex

./: .gitignore  CMakeLists.txt  README.md  naex_nodelets.xml  package.xml
include/naex/: array.h  buffer.h  cloud_filter.h  clouds.h  exceptions.h  exclude_frames_filter.h  filter.h  flann.h  follower.h  geom.h  graph.h  hash.h  iterators.h  map.h  naex.h  nearest_neighbors.h  nn_search.h  planner.h  point_field_traits.h  quantization.h  range_filter.h  reward.h  step_filter.h  timer.h  transform_filter.h  transforms.h  traversability.h  types.h  voxel_filter.h
include/naex/grid/: graph.h  grid.h  planner.h  search.h
launch/: dtr.rviz  explorer_x1.rviz  follower.launch  footprint.launch  husky.launch  jeanine.rviz  lidar_model.launch  mapper.launch  marv.rviz  naex.launch  odom.launch  planner.launch  play_skoda.launch  playback.launch  playback_virtual.rviz  preproc.launch  record.launch  slam.launch  subt.rviz  tf.launch
launch/dynamic_mapper/: icp.yaml  icp_4dof.yaml  input_filters.yaml  map_post_filters.yaml
scripts/: get_plan  lidar_inertial_odom  path_follower
src/: follower_node.cpp  grid_planner_node.cpp  incremental_flann_index.cpp  integral_radius_search.cpp  lidar_model.cpp  planner_node.cpp  traversability_nodelet.cpp
