<?xml version="1.0"?>
<package format="2">
    <name>naex</name>
    <version>0.0.1</version>
    <description>Robot navigation and exploration.</description>
    <maintainer email="tpetricek@gmail.com">Tomas Petricek</maintainer>
    <license>BSD</license>
    <url type="website">https://github.com/tpet/naex</url>
    <author email="tpetricek@gmail.com">Tomas Petricek</author>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>libflann-dev</depend>
    <depend>lz4</depend>
    <depend>message_runtime</depend>
    <depend>nav_msgs</depend>
    <depend>nodelet</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>
    <export>
        <nodelet plugin="${prefix}/naex_nodelets.xml" />
    </export>
</package>
